--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -25,7 +25,7 @@
         "terser": "5.7.0",
         "tsify": "5.0.4",
         "tslint": "6.1.3",
-        "typedoc": "0.19.2",
+        "typedoc": "^0.22.6",
         "typescript": "4.0.7"
     },
     "license": "Apache-2.0",
